Minor Java cleanups:
- Use Admin instead of AdminClient
- Use Map.of/List.of instead of Collections/Arrays
- Use constants for Kafka client configs
- Remove ZooKeeper mentions
- Clean some Javadoc

Signed-off-by: Mickael Maison <mickael.maison@gmail.com>